--- a/client/src/app/spreadsheet/components/field-cell/date/cell.html
+++ b/client/src/app/spreadsheet/components/field-cell/date/cell.html
@@ -12,11 +12,6 @@
     (onShow)="onMenuOpened()"
     (onHide)="onMenuClosed()"
   >
-    <p-datepicker
-      class="max-w-full"
-      [inline]="true"
-      [ngModel]="data"
-      (ngModelChange)="onDatePicked($event)"
-    />
+    <p-datepicker [inline]="true" [ngModel]="data" (ngModelChange)="onDatePicked($event)" />
   </p-overlay>
 }
