--- a/client/src/app/spreadsheet/spreadsheet.html
+++ b/client/src/app/spreadsheet/spreadsheet.html
@@ -1,5 +1,5 @@
-<p-toast />
-<p-confirmdialog />
+<p-toast appendTo="body" />
+<p-confirmdialog appendTo="body" />
 <p-menu #menu [model]="menuItems" [popup]="true" appendTo="body" />
 <p-contextmenu #contextMenu [model]="menuItems" appendTo="body" />
 <p-overlay
