--- a/client/src/app/app.html
+++ b/client/src/app/app.html
@@ -1,7 +1,17 @@
 <div class="app">
-  <div class="app-topbar flex items-center gap-2 pl-2 pr-4 py-2">
-    <p-button icon="pi pi-bars" severity="secondary" [text]="true" size="large" />
-    <div class="font-semibold">Chill Base</div>
+  <div class="app-topbar flex items-center justify-between gap-2 pl-2 pr-4 py-2">
+    <div class="flex items-center">
+      <p-button icon="pi pi-bars" severity="secondary" [text]="true" size="large" />
+      <div class="font-semibold">Chill Base</div>
+    </div>
+    <div class="flex items-center">
+      <p-button
+        label="API Docs"
+        severity="secondary"
+        icon="pi pi-file-check"
+        (click)="openAPIDocs()"
+      />
+    </div>
   </div>
   <p-divider style="margin: 0" />
   <div class="flex flex-1">
@@ -45,12 +55,16 @@
       <p-tabs value="0" class="flex-1">
         <p-tablist style="background: none">
           <p-tab value="0">
-            <i class="pi pi-table mr-2"></i>
-            <span>categories</span>
+            <div class="flex items-center">
+              <i class="pi pi-table mr-2"></i>
+              <span>categories</span>
+            </div>
           </p-tab>
           <p-tab value="1">
-            <i class="pi pi-sparkles mr-2"></i>
-            <span>AI Query</span>
+            <div class="flex items-center">
+              <i class="pi pi-sparkles mr-2"></i>
+              <span>AI Query</span>
+            </div>
           </p-tab>
         </p-tablist>
         <p-tabpanels style="padding: 0" class="flex-1">
