--- a/client/src/app/table/table-detail/table-detail.html
+++ b/client/src/app/table/table-detail/table-detail.html
@@ -1,39 +1,43 @@
-<p-tabs value="0" class="flex-1">
-  <p-tablist style="background: none">
-    <p-tab value="0">
-      <div class="flex items-center">
-        <i class="pi pi-table mr-2"></i>
-        <span>categories</span>
-      </div>
-    </p-tab>
-    <p-tab value="1">
-      <div class="flex items-center">
-        <i class="pi pi-sparkles mr-2"></i>
-        <span>AI Query</span>
-      </div>
-    </p-tab>
-  </p-tablist>
-  <p-tabpanels style="padding: 0" class="flex-1">
-    <p-tabpanel value="0" class="flex-1">
-      <spreadsheet
-        style="margin-left: 1px"
-        [config]="config"
-        [columns]="columns"
-        [rows]="rows"
-        (action)="console.log($event)"
-        (columnAction)="console.log($event)"
-        (rowAction)="console.log($event)"
-        (cellAction)="console.log($event)"
-      ></spreadsheet>
-    </p-tabpanel>
-    <p-tabpanel value="1">
-      <p class="m-0">
-        Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque
-        laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi
-        architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit
-        aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione
-        voluptatem sequi nesciunt. Consectetur, adipisci velit, sed quia non numquam eius modi.
-      </p>
-    </p-tabpanel>
-  </p-tabpanels>
-</p-tabs>
+@if (tblService.selectedTable()) {
+  <p-tabs value="0" class="flex-1">
+    <p-tablist style="background: none">
+      <p-tab value="0">
+        <div class="flex items-center">
+          <i class="pi pi-table mr-2"></i>
+          <span>{{ tblService.selectedTable().tableName }}</span>
+        </div>
+      </p-tab>
+      <!-- <p-tab value="1">
+        <div class="flex items-center">
+          <i class="pi pi-sparkles mr-2"></i>
+          <span>AI Query</span>
+        </div>
+      </p-tab> -->
+    </p-tablist>
+    <p-tabpanels style="padding: 0" class="flex-1">
+      <p-tabpanel value="0" class="flex-1">
+        @if (columns()) {
+          <spreadsheet
+            style="margin-left: 1px"
+            [config]="config()"
+            [columns]="columns()"
+            [rows]="rows()"
+            (action)="console.log($event)"
+            (columnAction)="console.log($event)"
+            (rowAction)="console.log($event)"
+            (cellAction)="console.log($event)"
+          ></spreadsheet>
+        }
+      </p-tabpanel>
+      <!-- <p-tabpanel value="1">
+        <p class="m-0">
+          Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque
+          laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi
+          architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit
+          aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione
+          voluptatem sequi nesciunt. Consectetur, adipisci velit, sed quia non numquam eius modi.
+        </p>
+      </p-tabpanel> -->
+    </p-tabpanels>
+  </p-tabs>
+}
