--- a/client/src/app/spreadsheet/spreadsheet.html
+++ b/client/src/app/spreadsheet/spreadsheet.html
@@ -140,15 +140,18 @@
           [style.minHeight.%]="100"
           [style.maxHeight.%]="100"
         ></div>
-        @if (column.field.required) {
-          <i class="pi pi-asterisk text-red-500" style="font-size: 6px"></i>
+        @if (column.primary) {
+          <i class="pi pi-key" style="color: var(--p-primary-color)"></i>
         }
         <div
-          class="text-sm white-space-nowrap overflow-hidden text-overflow-ellipsis flex-1"
+          class="text-sm white-space-nowrap overflow-hidden text-overflow-ellipsis"
           [attr.title]="column.field.name"
         >
           {{ column.field.name }}
         </div>
+        @if (column.field.required) {
+          <i class="pi pi-asterisk text-red-500" style="font-size: 6px"></i>
+        }
         @if (column.field.description?.length) {
           <i
             class="pi pi-info-circle"
