--- a/client/src/app/table/table-detail/table-detail.html
+++ b/client/src/app/table/table-detail/table-detail.html
@@ -22,10 +22,8 @@
             [config]="config()"
             [columns]="columns()"
             [rows]="rows()"
-            (action)="console.log($event)"
-            (columnAction)="console.log($event)"
-            (rowAction)="console.log($event)"
-            (cellAction)="console.log($event)"
+            (rowAction)="onRowAction($event)"
+            (cellAction)="onCellAction($event)"
           ></spreadsheet>
         }
       </p-tabpanel>
