feat: add asset path to angular.json and enhance table detail component with conditional rendering and image display

--- a/client/src/app/table/table-detail/table-detail.html
+++ b/client/src/app/table/table-detail/table-detail.html
@@ -38,4 +38,15 @@
       </p-tabpanel> -->
     </p-tabpanels>
   </p-tabs>
+} @else {
+  <div
+    class="flex flex-1 flex-col items-center justify-center m-1"
+    style="background-color: #fcfcfc"
+  >
+    <p-image src="assets/images/chill-guy.jpg" alt="Image" width="250" />
+    <p class="text-gray-500 italic mt-4 flex items-center">
+      <i class="pi pi-hand-point-right mr-2"></i>
+      <span>Unlock insights by picking any table to explore its data!</span>
+    </p>
+  </div>
 }
