fix: update API Docs button icon and adjust timeout duration for positionFillHandle in table services

--- a/client/src/app/app.html
+++ b/client/src/app/app.html
@@ -11,12 +11,7 @@
       <div class="font-semibold">Chill Base</div>
     </div>
     <div class="flex items-center">
-      <p-button
-        label="API Docs"
-        severity="secondary"
-        icon="pi pi-file-check"
-        (click)="openAPIDocs()"
-      />
+      <p-button label="API Docs" severity="secondary" icon="pi pi-book" (click)="openAPIDocs()" />
     </div>
   </div>
   <p-divider style="margin: 0" />
