feat: implement global error handling and response wrapping in REST API, update HTTP client configuration in Angular app to include error interceptor and add toast notifications

--- a/client/src/app/app.html
+++ b/client/src/app/app.html
@@ -1,3 +1,5 @@
+<p-toast position="top-right" [life]="5000"></p-toast>
+
 <div class="app">
   <div class="app-topbar flex items-center justify-between gap-2 pl-2 pr-4 py-2">
     <div class="flex items-center">
