refactor: rename OrderItem to OrderingRule and update related logic in data view options for improved clarity and consistency

--- a/client/src/app/spreadsheet/components/view-options/data-view-options.component.html
+++ b/client/src/app/spreadsheet/components/view-options/data-view-options.component.html
@@ -4,10 +4,10 @@
   <div class="w-md">
     <!-- Body -->
     <div>
-      @if (items().length) {
+      @if (rules().length) {
         <div cdkDropList (cdkDropListDropped)="onDropped($event)" class="flex flex-col gap-2">
           <div
-            *ngFor="let item of items(); let i = index; let first = first"
+            *ngFor="let item of rules(); let i = index; let first = first"
             cdkDrag
             cdkDragLockAxis="y"
             class="flex items-center justify-between"
