feat: enhance data view options with dynamic button labels and improve layout in spreadsheet component for better user experience

--- a/client/src/app/common/spreadsheet/components/view-options/column-view-options.component.html
+++ b/client/src/app/common/spreadsheet/components/view-options/column-view-options.component.html
@@ -1,7 +1,7 @@
 <p-popover #popover>
   <div class="w-3xs">
     <!-- Body -->
-    <div>
+    <div class="overflow-y-auto max-h-100">
       <div cdkDropList (cdkDropListDropped)="onDropped($event)" class="flex flex-col gap-2">
         <div
           *ngFor="let column of columns()"
