feat: enhance app layout with sidebar and chatbot integration, improve styling and transitions for better user experience

--- a/client/src/app/common/spreadsheet/components/field-cell/integer/cell.component.html
+++ b/client/src/app/common/spreadsheet/components/field-cell/integer/cell.component.html
@@ -10,7 +10,7 @@
   ></input-box>
 }
 @if (data !== undefined && data !== null) {
-  <div class="flex-1 text-right text-overflow-ellipsis">
+  <div class="w-full h-full text-right text-overflow-ellipsis">
     {{ data }}
   </div>
 }
