--- a/client/src/app/app.html
+++ b/client/src/app/app.html
@@ -1,29 +1,37 @@
 <p-toast position="top-right" [life]="5000"></p-toast>
 
 <div class="app">
-  <div class="app-topbar flex items-center justify-between gap-2 pl-2 pr-4 py-2">
+  <div
+    class="app-topbar flex items-center justify-between gap-2 pl-2 pr-4 py-2 border-b-1 border-surface-200"
+  >
     <div class="flex items-center">
       <p-button
         icon="pi pi-bars"
         severity="secondary"
         [text]="true"
         size="large"
-        (click)="toggleSideBar()"
+        (click)="toggleSidebar()"
       />
       <div class="font-semibold">Cozy DB</div>
     </div>
-    <div class="flex items-center">
+    <div class="flex gap-2 items-center">
       <p-button label="API Docs" severity="secondary" icon="pi pi-book" (click)="openAPIDocs()" />
+      <p-button icon="pi pi-sparkles" severity="secondary" (click)="toggleChatbot()" />
     </div>
   </div>
-  <p-divider style="margin: 0" />
-  <div class="app-main flex flex-1" [class.inactive]="!sideBarVisible()">
-    <div class="app-sidebar flex">
-      <app-table-list class="flex-1" />
-      <p-divider layout="vertical" style="margin: 0" />
+  <div
+    class="app-main w-full h-full"
+    [class.sidebar--opening]="sidebarVisible()"
+    [class.chatbot--opening]="chatbotVisible()"
+  >
+    <div class="app-sidebar border-r-1 border-surface-200">
+      <app-table-list />
     </div>
-    <div class="app-content flex flex-1">
-      <app-table-detail class="flex flex-1" />
+    <div class="w-full h-full">
+      <app-table-detail />
+    </div>
+    <div class="app-chatbot border-l-1 border-surface-200">
+      <app-chatbot />
     </div>
   </div>
 </div>
