--- a/client/src/app/app.scss
+++ b/client/src/app/app.scss
@@ -1,4 +1,5 @@
 $sidebar-width: 20rem;
+$chatbot-width: 30rem;
 $transition-duration: 0.2s;
 
 :host {
@@ -7,17 +8,27 @@ $transition-duration: 0.2s;
     flex-direction: column;
     width: 100vw;
     height: 100vh;
+    overflow: hidden;
 
     .app-main {
       position: relative;
+      transition:
+        padding-left $transition-duration,
+        padding-right $transition-duration;
 
-      &.inactive {
+      &.sidebar--opening {
+        padding-left: $sidebar-width;
+
         .app-sidebar {
-          left: -$sidebar-width;
+          left: 0;
         }
+      }
 
-        .app-content {
-          margin-left: 0;
+      &.chatbot--opening {
+        padding-right: $chatbot-width;
+
+        .app-chatbot {
+          right: 0;
         }
       }
     }
@@ -26,14 +37,18 @@ $transition-duration: 0.2s;
       position: absolute;
       top: 0;
       bottom: 0;
-      left: 0;
+      left: -$sidebar-width;
       width: $sidebar-width;
       transition: left $transition-duration;
     }
 
-    .app-content {
-      margin-left: $sidebar-width;
-      transition: margin-left $transition-duration;
+    .app-chatbot {
+      position: absolute;
+      top: 0;
+      bottom: 0;
+      right: -$chatbot-width;
+      width: $chatbot-width;
+      transition: right $transition-duration;
     }
   }
 }
