--- a/client/src/app/table/table-detail/table-detail.component.html
+++ b/client/src/app/table/table-detail/table-detail.component.html
@@ -1,6 +1,6 @@
 @if (tblService.selectedTable()) {
-  <p-tabs value="0" class="flex-1">
-    <p-tablist style="background: none">
+  <p-tabs value="0" class="w-full h-full">
+    <p-tablist>
       <p-tab value="0">
         <div class="flex items-center">
           <i class="pi pi-table mr-2"></i>
@@ -14,11 +14,10 @@
         </div>
       </p-tab> -->
     </p-tablist>
-    <p-tabpanels style="padding: 0" class="flex-1">
-      <p-tabpanel value="0" class="flex-1">
+    <p-tabpanels class="flex-1 !p-0">
+      <p-tabpanel value="0">
         @if (columns()) {
           <spreadsheet
-            style="margin-left: 1px"
             [config]="config()"
             [columns]="columns()"
             [rows]="rows()"
@@ -39,7 +38,7 @@
     </p-tabpanels>
   </p-tabs>
 } @else {
-  <div class="flex flex-1 flex-col items-center justify-center m-1">
+  <div class="flex flex-col w-full h-full items-center justify-center m-1">
     <p-image src="assets/images/chill-guy.png" alt="Image" width="320" />
     <p class="text-gray-500 italic flex items-center">
       <i class="pi pi-hand-point-right mr-2"></i>
