--- a/client/src/app/table/table-list/table-list.component.html
+++ b/client/src/app/table/table-list/table-list.component.html
@@ -1,9 +1,31 @@
 <div class="flex items-center justify-between px-4 py-2 border-b-1 border-surface-200">
   <div>Tables</div>
-  <p-button icon="pi pi-search" severity="secondary" [text]="true" />
+  <div class="flex">
+    <p-button
+      icon="pi pi-refresh"
+      severity="secondary"
+      [text]="true"
+      [rounded]="true"
+      [disabled]="isLoading()"
+      (click)="refreshTables()"
+    />
+  </div>
 </div>
-<ul class="list-none px-0 py-2 m-0 overflow-y-auto max-h-full">
-  @for (table of tables(); track table.tableName) {
+<div class="p-4">
+  <p-iconfield>
+    <p-inputicon class="pi pi-search" />
+    <input
+      class="w-full"
+      type="text"
+      pInputText
+      placeholder="Search"
+      [(ngModel)]="searchQuery"
+      (ngModelChange)="onTableSearch($event)"
+    />
+  </p-iconfield>
+</div>
+<ul class="list-none p-0 m-0 overflow-y-auto max-h-full">
+  @for (table of filteredTables(); track table.tableName) {
     <li (click)="onTableSelected(table)">
       <a
         pRipple
