fix: add relative positioning to input group addon for improved layout consistency

--- a/client/src/app/common/spreadsheet/spreadsheet.component.html
+++ b/client/src/app/common/spreadsheet/spreadsheet.component.html
@@ -43,7 +43,7 @@
     />
   </div>
   <p-inputgroup class="w-xs max-w-xs">
-    <p-inputgroup-addon>
+    <p-inputgroup-addon class="relative">
       <p-inputicon class="pi pi-search" />
     </p-inputgroup-addon>
     <input
