--- a/client/src/app/common/json-editor/json-editor-drawer.component.html
+++ b/client/src/app/common/json-editor/json-editor-drawer.component.html
@@ -5,7 +5,9 @@
   [modal]="false"
   styleClass="!w-150 json-editor-drawer"
 >
-  <json-editor [(value)]="value" />
+  <ng-template #content>
+    <json-editor [(value)]="value" />
+  </ng-template>
   <ng-template #footer>
     <div class="flex justify-end gap-2">
       <p-button label="Cancel" severity="secondary" (click)="cancel()" />
