--- a/client/src/app/common/rich-text-editor/rich-text-editor-drawer.component.html
+++ b/client/src/app/common/rich-text-editor/rich-text-editor-drawer.component.html
@@ -5,7 +5,9 @@
   [modal]="false"
   styleClass="!w-180 rich-text-editor-drawer"
 >
-  <p-editor [(ngModel)]="value" [readonly]="viewOnly()" class="h-full !flex flex-col" />
+  <ng-template #content>
+    <p-editor [(ngModel)]="value" [readonly]="viewOnly()" class="h-full !flex flex-col" />
+  </ng-template>
   <ng-template #footer>
     <div class="flex justify-end gap-2">
       <p-button label="Cancel" severity="secondary" (click)="cancel()" />
