feat: add record detail drawer to table detail component for enhanced row information display

--- a/client/src/app/table/table-detail/table-detail.component.html
+++ b/client/src/app/table/table-detail/table-detail.component.html
@@ -17,6 +17,12 @@
     <p-tabpanels class="flex-1 !p-0">
       <p-tabpanel value="0">
         @if (columns()) {
+          <record-detail-drawer
+            [(visible)]="visibleRecordDetail"
+            [fields]="fields()"
+            [data]="expandedRow?.data"
+            (closed)="expandedRow = null"
+          />
           <spreadsheet
             [config]="config()"
             [columns]="columns()"
