--- a/client/src/app/table/table-detail/table-detail.component.html
+++ b/client/src/app/table/table-detail/table-detail.component.html
@@ -19,8 +19,10 @@
         @if (columns()) {
           <record-detail-drawer
             [(visible)]="visibleRecordDetail"
+            [id]="expandedRow?.id"
             [fields]="fields()"
             [data]="expandedRow?.data"
+            (saved)="onRecordUpdated($event)"
             (closed)="expandedRow = null"
           />
           <spreadsheet
